[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluster-execution-mcp"
version = "0.2.0"
description = "MCP Server for cluster-aware command execution across distributed nodes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "AGI System", email = "agi@agentic-system.local" }
]
keywords = ["mcp", "cluster", "distributed", "execution", "ssh"]

dependencies = [
    "mcp>=0.9.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cluster-execution-mcp = "cluster_execution_mcp.server:main"
cluster-router = "cluster_execution_mcp.router:main"

[project.urls]
Homepage = "https://github.com/agentic-system/cluster-execution-mcp"
Repository = "https://github.com/agentic-system/cluster-execution-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/cluster_execution_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/cluster_execution_mcp"]
omit = ["*/tests/*"]
